--- a/wdanalytics/build.gradle
+++ b/wdanalytics/build.gradle
@@ -1,21 +1,23 @@
 apply plugin: 'com.android.library'
 apply plugin: 'org.greenrobot.greendao'
-apply plugin: 'maven'
+apply plugin: 'com.github.dcendents.android-maven'
+// Your Group
+group='com.github.sweet-guy'
 android {
     compileSdkVersion 27
     buildToolsVersion "27.0.3"
-    uploadArchives {
-        repositories {
-            mavenDeployer {
-                pom.groupId = "com.wdcloud.analytic"
-                pom.artifactId = "analytic-release"
-                pom.version = "1.0.8"
-                repository(url: "http://192.168.6.133:8888/nexus/content/repositories/WdMobile/") {
-                    authentication(userName: "deployment", password: "deployment123")
-                }
-            }
-        }
-    }
+//    uploadArchives {
+//        repositories {
+//            mavenDeployer {
+//                pom.groupId = "com.wdcloud.analytic"
+//                pom.artifactId = "analytic-release"
+//                pom.version = "1.0.8"
+//                repository(url: "http://192.168.6.133:8888/nexus/content/repositories/WdMobile/") {
+//                    authentication(userName: "deployment", password: "deployment123")
+//                }
+//            }
+//        }
+//    }
     defaultConfig {
         minSdkVersion 20
         targetSdkVersion 27
